--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ solveet-diamond-mine/target/*
 
 solveet-christmas-tree/target/*
 
+solveet-add-positive-numbers/target/*
+
 *.class
 
 # Package Files #
