--- a/marvellous-mazes/pom.xml
+++ b/marvellous-mazes/pom.xml
@@ -20,6 +20,7 @@
   </properties>
 
   <dependencies>
+  
     <dependency>
       <groupId>org.codehaus.gmaven.runtime</groupId>
       <artifactId>gmaven-runtime-1.8</artifactId>
@@ -34,21 +35,134 @@
   </dependencies>
 
   <build>
-    <sourceDirectory>.\src\main\groovy</sourceDirectory>
-    <scriptSourceDirectory>.\src\main\scripts</scriptSourceDirectory>
-    <testSourceDirectory>.\src\test\groovy</testSourceDirectory>
-    
-    <resources>
-      <resource>
-        <directory>.\src\main\resources</directory>
-      </resource>
-    </resources>
+  <sourceDirectory>.\src\main\groovy</sourceDirectory>
+  <scriptSourceDirectory>.\src\main\scripts</scriptSourceDirectory>
+  <testSourceDirectory>.\src\test\groovy</testSourceDirectory>
+  <resources>
+    <resource>
+      <directory>.\src\main\resources</directory>
+    </resource>
+  </resources>
+  <testResources>
+    <testResource>
+      <directory>.\src\test\resources</directory>
+    </testResource>
+  </testResources>
+      
+  
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <versionRange>[2.3,)</versionRange>
+                    <goals>
+                      <goal>compile</goal>
+                      <goal>testCompile</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <execute />
+                  </action>
+                </pluginExecution>
 
-    <testResources>
-      <testResource>
-        <directory>.\src\test\resources</directory>
-      </testResource>
-    </testResources>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.codehaus.groovy</groupId>
+                    <artifactId>groovy</artifactId>
+                    <versionRange>[1.8,)</versionRange>
+                    <goals>
+                      <goal>testCompile</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <execute />
+                  </action>
+                </pluginExecution>
+
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.codehaus.gmaven</groupId>
+                    <artifactId>gmaven-plugin</artifactId>
+                    <versionRange>[1.3,)</versionRange>
+                    <goals>
+                      <goal>testCompile</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <execute />
+                  </action>
+                </pluginExecution>
+
+
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <compilerId>groovy-eclipse-compiler</compilerId>
+          <verbose>true</verbose>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-eclipse-compiler</artifactId>
+            <version>2.6.0-01</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.10</version>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.gmaven</groupId>
+        <artifactId>gmaven-plugin</artifactId>
+        <version>1.3</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.codehaus.gmaven.runtime</groupId>
+            <artifactId>gmaven-runtime-1.8</artifactId>
+            <version>1.4</version>
+          </dependency>
+          <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>1.8.4</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <debug>false</debug>
+          <verbose>true</verbose>
+          <stacktrace>true</stacktrace>
+          <defaultScriptExtension>.groovy</defaultScriptExtension>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
 
 </project>
