--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ russian-olimpics/target/*
 senw-route/target/*
 
 loopless-route/target/*
+loopless-route/comments.txt
 
 hamming-numbers/target/*
 hamming-numbers/comments.txt
