--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ loopless-route/comments.txt
 hamming-numbers/target/*
 hamming-numbers/comments.txt
 
+hamming-numbers-js/target/*
+hamming-numbres-js/comments.txt
 
 *.class
 
