solution to the top right problem, or how to find the bathroom in a bar

--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,8 @@ spiral-matrix-coords/comments.txt
 spiral-matrix/target/*
 spiral-matrix/comments.txt
 
-bottom-right/target/*
-bottom-right/comments.txt
+top-right/target/*
+top-right/comments.txt
 
 
 
