ignoring solution to binary sequence problem

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,10 @@ spiral-matrix/comments.txt
 top-right/target/*
 top-right/comments.txt
 
+binary-sequence/target/*
+binary-sequence/comments.txt
+
+
 
 
 *.class
