12meses12katas kata, code breaker, solved

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ hannoi-js/comments.txt
 
 caesar-ciphering-py/comments.txt
 
+kata-code-breaker/target/*
+kata-code-breaker/comments.txt
+
 
 *.class
 
