first commit to solver happy number problem

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,9 @@ kata-code-breaker/comments.txt
 
 merge-sort-py/comments.txt
 
+happy-number-js/target/*
+happy-number-js/comments.txt
+
 
 
 *.class
