--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,9 @@ merge-sort-py/comments.txt
 happy-number-js/target/*
 happy-number-js/comments.txt
 
+brainfuck-interpreter/target/*
+brainfuck-interpreter/comments.txt
+
 
 
 *.class
