Solved Hanoi Towers problem in Ruby

--- a/.gitignore
+++ b/.gitignore
@@ -86,6 +86,8 @@ happy-number-js/comments.txt
 brainfuck-interpreter/target/*
 brainfuck-interpreter/comments.txt
 
+hannoi-rb/comments.txt
+
 
 
 *.class
