a little refactor to make decipher method a one-liner

--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,8 @@ nicomachus-cube-rb/comments.txt
 
 perfect-number-rb/comments.txt
 
+caesar-ciphering-scala/comments.txt
+
 *.class
 
 # Package Files #
