start working on a new solution in scala

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,10 @@ perfect-number-rb/comments.txt
 
 caesar-ciphering-scala/comments.txt
 
+spotify-best-before-scala/comments.txt
+
+
+
 *.class
 
 # Package Files #
