added a new sample test using specs2 and sbt. ready to start coding

--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,7 @@ perfect-number-rb/comments.txt
 caesar-ciphering-scala/comments.txt
 
 spotify-best-before-scala/comments.txt
+spotify-best-before-scala/target/*
 
 
 
