--- a/marvel-api-dart/pubspec.yaml
+++ b/marvel-api-dart/pubspec.yaml
@@ -3,4 +3,5 @@ author: rchavarria
 description: A program writen in Dart that allows you to consume the Marvel API
 homepage: http://rchavarria.github.io
 dev_dependencies:
-  unittest: '>=0.10.0'
+    unittest: '>=0.10.0'
+    http: ">=0.9.0 <0.10.0"
