--- a/mirrored-numbers-dart/pubspec.yaml
+++ b/mirrored-numbers-dart/pubspec.yaml
@@ -1,6 +1,6 @@
-name: next_leap_year
+name: mirrored_numbers
 author: rchavarria
-description: A program writen in Dart that computes if a given year is leap and it returns the next leap year
+description: A program writen in Dart that computes the sum of two numbers, given x = 123, the result is the sum of x + 321
 homepage: http://rchavarria.github.io
 dev_dependencies:
     unittest: '>=0.10.0'
