--- a/stone-paper-scissors-dart/pubspec.yaml
+++ b/stone-paper-scissors-dart/pubspec.yaml
@@ -1,6 +1,6 @@
-name: mirrored_numbers
+name: stone_paper_scissors
 author: rchavarria
-description: A program writen in Dart that computes the sum of two numbers, given x = 123, the result is the sum of x + 321
+description: A program writen in Dart to play the game "Stone, Paper, Scissors"
 homepage: http://rchavarria.github.io
 dev_dependencies:
     unittest: '>=0.10.0'
